k8s-app-fixed-manual.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-counter-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-counter-app
  template:
    metadata:
      labels:
        app: simple-counter-app
    spec:
      containers:
      - name: simple-counter-app
        image: nginx:alpine
        ports:
        - containerPort: 80
        command: ["sh", "-c"]
        args:
        - |
          [...]
---
apiVersion: v1
kind: Service
metadata:
  name: simple-counter-service
spec:
  selector:
    app: simple-counter-app
  ports:
  - port: 80
    targetPort: 80
  type: NodePort
