k8s-app-fixed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-counter-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simple-counter-app
  template:
    metadata:
      labels:
        app: simple-counter-app
    spec:
      containers:
      - name: simple-counter-app
        image: node:18-alpine
        ports:
        - containerPort: 3000
        command: ["sh", "-c"]
        args:
        - |
          npm install express && node -e "
          const express = require('express');
          const app = express();
          let counter = 0;
          
          app.get('/', (req, res) => {
            counter++;
            const pod = process.env.HOSTNAME || 'unknown-pod';
            const html = '<html><head><title>Simple Counter App</title></head><body style=\"font-family: Arial; text-align: center; margin: 50px;\"><h1>Simple Counter App v1.2-fixed</h1><h2 style=\"color: blue; font-size: 3em;\">' + counter + '</h2><p>Aufrufe insgesamt</p><p><strong>Pod:</strong> ' + pod + '</p><p><em>Aktualisiert: ' + new Date().toLocaleString('de-DE') + '</em></p><button onclick=\"location.reload()\">Aktualisieren</button></body></html>';
            res.send(html);
          });
          
          app.listen(3000, '0.0.0.0', () => {
            console.log('App running on port 3000');
          });
          "
---
apiVersion: v1
kind: Service
metadata:
  name: simple-counter-service
spec:
  selector:
    app: simple-counter-app
  ports:
  - port: 80
    targetPort: 3000
  type: NodePort
