k8s-entities.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stateful-app
  labels:
    version: 0.0.6
spec:
  replicas: 3
  selector:
    matchLabels:
      app: stateful-app
  template:
    metadata:
      labels:
        app: stateful-app
        version: 0.0.6
    spec:
      containers:
        - name: stateful-container
          image: silasschroeder/stateful-app:v1.0.8
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: app-data
              mountPath: /app/data
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
      volumes:
        - name: app-data
          persistentVolumeClaim:
            claimName: app-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: stateful-app-service
  labels:
    version: 0.0.6
spec:
  selector:
    app: stateful-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stateful-app-ingress
  labels:
    version: 0.0.6
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stateful-app-service
                port:
                  number: 80
